add user integration
